<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/dragHandle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtRequestTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/txtDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:fontFamily="@font/poppins"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/txtRequestDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_description"
        android:fontFamily="@font/poppins"
        android:layout_margin="20dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_name"
            android:fontFamily="@font/poppins"
            android:layout_weight="2"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtCustomerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:gravity="end"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Vehicle Model"
            android:fontFamily="@font/poppins"
            android:layout_weight="2"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtCustomerVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:gravity="end"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_mobile"
            android:fontFamily="@font/poppins"
            android:layout_weight="2"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtCustomerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:gravity="end"
            android:layout_weight="1"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerUrgentRequestImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_color"
            android:fontFamily="@font/poppins_medium"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/accept" />

        <Button
            android:id="@+id/btnReject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/poppins_medium"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/reject" />

    </LinearLayout>

</LinearLayout>